--- a/front-end/src/components/FormUrl/FormUrl.css
+++ b/front-end/src/components/FormUrl/FormUrl.css
@@ -1,19 +1,17 @@
 form {
-  display: grid;
-  gap: 2rem;
-  width: fit-content;
-  width: 40rem;
-  max-width: 50rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
   padding: 0.5rem;
   border: solid 1px red;
-  border-radius: 1rem;
 }
 
 .input-container {
-  gap: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: 0.5rem;
 }
 
 input {
@@ -33,18 +31,19 @@ form > input[type="submit"] {
   gap: 0.5rem;
   border: none;
   background: none;
-  cursor: pointer;
   width: fit-content;
-  &:active {
-    color: aqua;
-  }
+  cursor: pointer;
 }
 
 .advanced {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  column-gap: 2rem;
-  row-gap: 1rem;
   width: 100%;
+  gap: 1rem;
+
+  @media screen and (min-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
 }
