--- a/front-end/src/components/NavBar/NavBar.css
+++ b/front-end/src/components/NavBar/NavBar.css
@@ -1,10 +1,15 @@
 .navbar {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 5rem;
-  width: 100%;
-  padding: 0.5rem;
-  border: solid 1px yellow;
+  padding: 1rem;
+  border-bottom: solid 2px rgb(from var(--text) r g b / 0.5);
+  background: var(--background);
+
+  .icons {
+    display: flex;
+    justify-content: space-between;
+    width: 5rem;
+  }
 }
