--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,5 +1,10 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   width: 100%;
+  background: var(--background);
+  color: var(--text);
 
   @media screen and (min-width: 640px) {
     max-width: 640px;
@@ -19,5 +24,51 @@
 }
 
 main {
-  margin: 0 auto;
+  margin: auto 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding: 1.5rem 2rem;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+
+input {
+  background-color: #eee;
+  border: none;
+  padding: 0.7rem;
+  width: 100%;
+  border-radius: 0.5rem;
+  height: 3rem;
+}
+
+form > input[type="submit"] {
+  height: 3.3rem;
+  font-size: 1.1em;
+  font-weight: bold;
+  cursor: pointer;
+  background: var(--secondary);
+
+  &:hover {
+    background: var(--primary);
+  }
+}
+
+.icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    transform: scale(1.5);
+    color: var(--accent);
+  }
 }
