--- a/front-end/src/components/FormUrl/FormUrl.css
+++ b/front-end/src/components/FormUrl/FormUrl.css
@@ -1,43 +1,54 @@
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-  padding: 0.5rem;
-  border: solid 1px red;
-}
-
-input {
-  padding: 1rem;
+.form-url-container {
   border-radius: 1rem;
-  width: 100%;
-}
-
-form > input[type="submit"] {
-  cursor: pointer;
+  background: var(--card-bg);
 }
 
 .advanced-button {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 0.5rem;
-  border: none;
-  background: none;
-  width: fit-content;
-  cursor: pointer;
   margin-left: auto;
 }
 
+.arrow {
+  transition: all ease-in-out 0.3s;
+}
+
+.arrow.open {
+  transform: rotatez(180deg);
+}
+
 .advanced {
+  display: grid;
   width: 100%;
+  height: 18rem;
   gap: 1rem;
+  overflow: hidden;
+  transition: all ease-in-out 0.3s;
 
   @media screen and (min-width: 768px) {
-    display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     column-gap: 1rem;
     row-gap: 1rem;
+  }
+}
+
+.advanced.close {
+  height: 0;
+}
+
+.timestamp-input-container {
+  display: flex;
+  gap: 1rem;
+
+  input {
+    text-align: center;
+  }
+
+  #date-input {
+    width: 60%;
+  }
+
+  #time-input {
+    width: 40%;
   }
 }
