--- a/front-end/src/app/App.css
+++ b/front-end/src/app/App.css
@@ -93,11 +93,59 @@ button {
   gap: 0.5rem;
 }
 
-@keyframes fadeLoad {
-  0% {
-    opacity: 0;
+/*---------- CARD ----------*/
+
+.card-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background: var(--card-bg);
+}
+
+.card-container.down {
+  transition: 0.75s ease-in-out;
+}
+
+.card-container.down.close {
+  border-radius: 80% 80% 0 0/ 10% 10% 0 0;
+  transform: translateY(-4rem);
+  background: var(--secondary);
+
+  &:hover {
+    background: var(--primary);
   }
-  100% {
-    opacity: 1;
+}
+
+.card-label {
+  padding-top: 2rem;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  transition: 0.75s ease-in-out;
+}
+
+.card-label.close {
+  padding-top: 1rem;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.card-label.up {
+  height: 4rem;
+}
+
+.card-label.up.close {
+  height: 4rem;
+  padding-top: 0rem;
+  z-index: 1;
+  border-radius: 0 0 70% 70%;
+  background: var(--secondary);
+
+  &:hover {
+    background: var(--primary);
   }
 }
