--- a/front-end/src/app/App.css
+++ b/front-end/src/app/App.css
@@ -42,6 +42,13 @@ main {
   }
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+
 button {
   height: 2.5rem;
   padding: 0.5rem;
