--- a/front-end/src/app/index.css
+++ b/front-end/src/app/index.css
@@ -88,6 +88,7 @@ h6 {
   --card-bg: rgb(210, 241, 210);
   --input-bg: rgb(from var(--text) r g b / 0.1);
   --title: rgb(50, 120, 50);
+  --text-gray: rgb(from var(--text) r g b / 0.6);
 }
 :root[data-theme="dark"] {
   --text: rgb(246, 249, 246);
@@ -99,4 +100,5 @@ h6 {
   --card-bg: rgb(11, 33, 11);
   --input-bg: rgb(from var(--text) r g b / 0.6);
   --title: rgb(50, 200, 50);
+  --text-gray: rgb(from var(--text) r g b / 0.6);
 }
