--- a/front-end/src/components/url/show/Show.css
+++ b/front-end/src/components/url/show/Show.css
@@ -1,12 +1,12 @@
 .show-url {
   overflow: hidden;
-  height: 20rem;
   border-radius: 1rem;
-}
 
-.buttons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 1rem;
+  &.small {
+    height: 20rem;
+  }
+
+  &.big {
+    height: 35rem;
+  }
 }
