--- a/front-end/src/components/commons/modal/Modal.css
+++ b/front-end/src/components/commons/modal/Modal.css
@@ -17,6 +17,7 @@
   background: rgba(0, 0, 0, 0.6);
   z-index: 5;
   animation: fade 0.3s ease-in-out;
+  color: var(--text);
 }
 
 .modal-container {
