--- a/front-end/src/app/index.css
+++ b/front-end/src/app/index.css
@@ -89,6 +89,8 @@ h6 {
   --input-bg: rgb(from var(--text) r g b / 0.1);
   --title: rgb(50, 120, 50);
   --text-gray: rgb(from var(--text) r g b / 0.6);
+  --border-gray: rgb(from var(--text) r g b / 0.3);
+  --icon-bg: rgb(from var(--background) r g b / 0.5);
 }
 :root[data-theme="dark"] {
   --text: rgb(246, 249, 246);
@@ -101,4 +103,6 @@ h6 {
   --input-bg: rgb(from var(--text) r g b / 0.6);
   --title: rgb(50, 200, 50);
   --text-gray: rgb(from var(--text) r g b / 0.6);
+  --border-gray: rgb(from var(--text) r g b / 0.3);
+  --icon-bg: rgb(from var(--background) r g b / 0.5);
 }
