--- a/front-end/src/components/user/history/container/Container.css
+++ b/front-end/src/components/user/history/container/Container.css
@@ -10,12 +10,109 @@
     text-align: center;
   }
 
-  .history-list {
+  .bar {
     width: 100%;
-    max-height: 35rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+
+    form {
+      flex-direction: row;
+      padding: 0;
+      align-items: center;
+      border-radius: 0.5rem;
+      gap: 0.5rem;
+    }
+
+    .search {
+      padding: 0 0.5rem;
+      width: 80%;
+      border: 1px solid var(--border-gray);
+
+      &:focus-within .lens {
+        color: var(--primary);
+      }
+
+      .button {
+        border: none;
+        background: none;
+        color: var(--text-gray);
+        padding: 0;
+      }
+
+      .reset {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s, visibility 0.3s;
+      }
+
+      input:not(:placeholder-shown) + .reset {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      input {
+        height: 2.5rem;
+        background: transparent;
+        border: none;
+        padding: 0;
+        color: var(--text);
+
+        &:focus {
+          outline: none;
+        }
+
+        &::placeholder {
+          color: var(--border-gray);
+        }
+      }
+    }
+
+    .pages {
+      width: 15%;
+
+      select {
+        height: 100%;
+        width: 100%;
+        background: transparent;
+        border: 1px solid var(--border-gray);
+        border-radius: 0.4rem;
+        color: var(--text);
+      }
+    }
+  }
+
+  .list {
+    width: 100%;
+    height: 15rem;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+  }
+
+  .pagination {
+    display: flex;
+    margin: 0 auto;
+    width: 100%;
+    overflow-x: auto;
+    list-style-type: none;
+    padding: 0;
+    gap: 0.5rem;
+
+    li {
+      padding: 0.3rem 0.7rem;
+      align-items: center;
+      border: 1px solid var(--secondary);
+      border-radius: 0.5rem;
+      cursor: pointer;
+      background: var(--background);
+      transition: background 0.3s ease, color 0.3s ease;
+
+      &.active {
+        background: var(--secondary);
+        color: var(--background);
+      }
+    }
   }
 }
