FE [REFACTOR] - Change Url context to implement 'isNew' value

--- a/front-end/src/components/user/history/container/Container.css
+++ b/front-end/src/components/user/history/container/Container.css
@@ -78,6 +78,7 @@
         border: 1px solid var(--border-gray);
         border-radius: 0.4rem;
         color: var(--text);
+        text-align: center;
       }
     }
   }
