--- a/front-end/src/components/sign/page/Page.css
+++ b/front-end/src/components/sign/page/Page.css
@@ -18,4 +18,10 @@
     justify-content: space-evenly;
     margin: 1rem auto;
   }
+
+  .inputs-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 }
