--- a/front-end/src/components/url/form/Form.css
+++ b/front-end/src/components/url/form/Form.css
@@ -1,6 +1,10 @@
 .form-url-container {
   border-radius: 1rem;
   background: var(--card-bg);
+
+  #submit {
+    margin: 0;
+  }
 }
 
 .advanced-button {
@@ -16,11 +20,17 @@
   }
 }
 
+.input-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
 .advanced {
   display: grid;
   width: 100%;
-  height: 18rem;
-  gap: 1rem;
+  height: 24rem;
+  gap: 0.5rem;
   overflow: hidden;
   transition: all ease-in-out 0.3s;
 
@@ -33,6 +43,17 @@
 
   &.close {
     height: 0;
+  }
+
+  #note {
+    width: 100%;
+    background: var(--input-bg);
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    height: 4rem;
+    overflow-y: auto;
+    resize: none;
   }
 }
 
@@ -50,6 +71,7 @@
 
     #enable {
       width: 1.5rem;
+      cursor: pointer;
     }
   }
 
