FE [FEAT] - Add form error validation with zod and create new specific files for schemas

--- a/front-end/src/app/App.css
+++ b/front-end/src/app/App.css
@@ -102,6 +102,17 @@ form > input[type="submit"] {
   }
 }
 
+.error-input {
+  color: red;
+  border: 1px solid red;
+}
+
+.error-input-message {
+  font-weight: 400;
+  font-size: 0.9rem;
+  color: red;
+}
+
 /*---------- CARD ----------*/
 
 .card-container {
