--- a/front-end/src/components/commons/delete/Delete.css
+++ b/front-end/src/components/commons/delete/Delete.css
@@ -2,9 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 90vw;
+  text-align: center;
+  padding: 1rem;
+  gap: 1rem;
 
-  .title {
-    margin-top: 1rem;
-    text-align: center;
+  form {
+    padding: 0;
+    gap: 0;
   }
 }
