--- a/front-end/src/app/App.css
+++ b/front-end/src/app/App.css
@@ -3,13 +3,14 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  width: 100%;
+  width: 100vw;
+  min-width: 330px;
   background: var(--background);
   color: var(--text);
+}
 
-  @media screen and (min-width: 640px) {
-    max-width: 640px;
-  }
+main {
+  margin: auto;
 
   @media screen and (min-width: 768px) {
     max-width: 768px;
@@ -18,19 +19,12 @@
   @media screen and (min-width: 1024px) {
     max-width: 1024px;
   }
-
-  @media screen and (min-width: 1280px) {
-    max-width: 1280px;
-  }
-}
-
-main {
-  margin: auto 0;
 }
 
 /*---------- COMMONS ----------*/
 
 .icon {
+  color: var(--text);
   height: 1.5rem;
   width: 1.5rem;
   transition: 0.3s ease-in-out;
@@ -39,6 +33,11 @@ main {
   &:hover {
     transform: scale(1.5);
     color: var(--accent);
+  }
+
+  @media screen and (min-width: 768px) {
+    height: 2rem;
+    width: 2rem;
   }
 }
 
@@ -64,6 +63,44 @@ button {
 
   &:hover {
     background: var(--primary);
+  }
+
+  &:active {
+    background: var(--accent);
+  }
+}
+
+.bar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 5rem;
+  width: 100vw;
+  padding: 1rem;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding: 1rem 0;
+    margin: 0 auto;
+    height: 7rem;
+  }
+
+  @media screen and (min-width: 1024px) {
+    max-width: 1024px;
+  }
+
+  .icons {
+    display: flex;
+    justify-content: space-between;
+    width: 7rem;
+
+    @media screen and (min-width: 768px) {
+      width: 10rem;
+    }
+  }
+
+  .text {
+    font-size: 1rem;
   }
 }
 
@@ -144,6 +181,7 @@ form > input[type="submit"] {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   font-weight: bold;
   transition: 0.75s ease-in-out;
 }
