--- a/front-end/src/components/home/explore/Explore.css
+++ b/front-end/src/components/home/explore/Explore.css
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   gap: 1rem;
+
+  @media screen and (min-width: 768px) {
+    gap: 2rem;
+  }
 
   .text-container {
     display: flex;
@@ -11,13 +14,27 @@
     justify-content: center;
     gap: 0.5rem;
 
+    @media screen and (min-width: 768px) {
+      gap: 1rem;
+    }
+
     .title {
       font-size: 1.5rem;
       color: var(--title);
+
+      @media screen and (min-width: 768px) {
+        font-size: 2rem;
+        line-height: 2.5rem;
+      }
     }
 
     .description {
       line-height: 1.625;
+
+      @media screen and (min-width: 768px) {
+        font-size: 1.2rem;
+        line-height: 2rem;
+      }
     }
   }
 
@@ -25,6 +42,10 @@
     width: 100%;
     display: block;
     overflow-x: auto;
+
+    @media screen and (min-width: 768px) {
+      font-size: 1.25rem;
+    }
 
     tbody {
       display: grid;
@@ -51,12 +72,16 @@
 
           &.header {
             gap: 0.5rem;
-            letter-spacing: -0.01rem;
             line-height: 1.2rem;
 
-            svg {
+            .table-icon {
               height: 1.5rem;
               width: 1.5rem;
+
+              @media screen and (min-width: 768px) {
+                height: 2rem;
+                width: 2rem;
+              }
             }
           }
 
@@ -96,9 +121,14 @@
             background: var(--background);
           }
 
-          svg {
+          .table-icon {
             height: 1.25rem;
             width: 1.25rem;
+
+            @media screen and (min-width: 768px) {
+              height: 1.5rem;
+              width: 1.5rem;
+            }
           }
         }
       }
