--- a/front-end/src/components/home/faq/container/Container.css
+++ b/front-end/src/components/home/faq/container/Container.css
@@ -7,5 +7,10 @@
   .title {
     font-size: 1.5rem;
     color: var(--title);
+
+    @media screen and (min-width: 768px) {
+      font-size: 2rem;
+      line-height: 2.5rem;
+    }
   }
 }
