--- a/front-end/src/components/home/faq/item/Item.css
+++ b/front-end/src/components/home/faq/item/Item.css
@@ -13,6 +13,10 @@
     font-weight: 550;
     background: var(--background);
 
+    @media screen and (min-width: 768px) {
+      font-size: 1.5rem;
+    }
+
     &:after,
     &:before {
       content: "";
@@ -40,6 +44,12 @@
       font-weight: 300;
       font-size: 0.9rem;
       transition: opacity 0.25s ease-in-out;
+
+      @media screen and (min-width: 768px) {
+        padding: 1rem 1.5rem;
+        font-size: 1.1rem;
+        font-weight: 350;
+      }
     }
   }
 }
