--- a/front-end/src/components/sign/login/Login.css
+++ b/front-end/src/components/sign/login/Login.css
@@ -1,4 +1,8 @@
 #login-container.card-container.down.open {
   padding-top: 7rem;
   transform: translateY(-34rem);
+
+  @media screen and (min-width: 640px) {
+    transform: translateY(-36rem);
+  }
 }
