--- a/front-end/src/components/sign/page/Page.css
+++ b/front-end/src/components/sign/page/Page.css
@@ -1,15 +1,18 @@
 .sign-page {
-  height: 100%;
-  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 30rem;
 
   .sign-container {
     overflow: hidden;
     height: 34rem;
     width: 90vw;
     border-radius: 1rem;
+
+    @media screen and (min-width: 640px) {
+      height: 36rem;
+    }
   }
 
   .icons {
@@ -23,5 +26,9 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+
+    @media screen and (min-width: 640px) {
+      gap: 1rem;
+    }
   }
 }
