--- a/front-end/src/components/url/form/Form.css
+++ b/front-end/src/components/url/form/Form.css
@@ -2,90 +2,88 @@
   border-radius: 1rem;
   background: var(--card-bg);
 
-  #submit {
-    margin: 0;
-  }
-}
+  .advanced-button {
+    margin-left: auto;
 
-.advanced-button {
-  display: flex;
-  margin-left: auto;
-}
+    .arrow {
+      transition: all ease-in-out 0.3s;
 
-.arrow {
-  transition: all ease-in-out 0.3s;
-
-  &.open {
-    transform: rotatez(180deg);
-  }
-}
-
-.input-container {
-  display: flex;
-  flex-direction: column;
-  gap: 0.25rem;
-}
-
-.advanced {
-  display: grid;
-  width: 100%;
-  height: 24rem;
-  gap: 0.5rem;
-  overflow: hidden;
-  transition: all ease-in-out 0.3s;
-
-  @media screen and (min-width: 768px) {
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    column-gap: 1rem;
-    row-gap: 1rem;
+      &.open {
+        transform: rotatez(180deg);
+      }
+    }
   }
 
-  &.close {
-    height: 0;
-  }
-
-  #note {
+  .advanced {
+    display: grid;
     width: 100%;
-    background: var(--input-bg);
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 0.5rem;
-    height: 4rem;
-    overflow-y: auto;
-    resize: none;
-  }
-}
+    height: 18rem;
+    gap: 0.75rem;
+    overflow: hidden;
+    transition: all ease-in-out 0.3s;
+    margin-top: 1rem;
 
-.split-inputs {
-  display: flex;
-  gap: 1rem;
+    &.large {
+      height: 25rem;
+    }
 
-  #prefix-input {
-    width: 80%;
-  }
+    &.close {
+      margin-top: 0;
+      height: 0;
+    }
 
-  #enable-input {
-    width: 20%;
-    align-items: center;
-
-    #enable {
-      width: 1.5rem;
-      cursor: pointer;
+    #note {
+      width: 100%;
+      background: var(--input-bg);
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      height: 4rem;
+      overflow-y: auto;
+      resize: none;
     }
   }
 
-  &.timestamp {
-    input {
-      text-align: center;
+  .input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+  }
+
+  .split-inputs {
+    display: flex;
+    gap: 1rem;
+
+    #prefix-input {
+      width: 80%;
     }
 
-    #date-input {
-      width: 60%;
+    #enable-input {
+      width: 20%;
+      align-items: center;
+
+      #enable {
+        width: 1.5rem;
+        cursor: pointer;
+      }
     }
 
-    #time-input {
-      width: 40%;
+    &.timestamp {
+      input {
+        text-align: center;
+      }
+
+      #date-input {
+        width: 60%;
+      }
+
+      #time-input {
+        width: 40%;
+      }
     }
+  }
+
+  form > input[type="submit"] {
+    margin-top: 0;
   }
 }
