--- a/front-end/src/components/url/page/Page.css
+++ b/front-end/src/components/url/page/Page.css
@@ -1,8 +1,16 @@
 .url-page {
-  width: fit-content;
-  margin: auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  gap: 3rem;
+  align-items: center;
+
+  .url-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 3rem;
+
+    @media screen and (min-width: 1024px) {
+      gap: 5rem;
+    }
+  }
 }
