--- a/front-end/src/components/user/history/container/Container.css
+++ b/front-end/src/components/user/history/container/Container.css
@@ -1,5 +1,4 @@
-.history-container {
-  width: 100%;
+.history-wrapper {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -12,8 +11,8 @@
 
   .bar {
     width: 100%;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 10fr 1fr;
     gap: 1rem;
 
     form {
@@ -26,7 +25,6 @@
 
     .search {
       padding: 0 0.5rem;
-      width: 80%;
       border: 1px solid var(--border-gray);
 
       &:focus-within .lens {
@@ -69,7 +67,7 @@
     }
 
     .pages {
-      width: 15%;
+      min-width: 5rem;
 
       select {
         height: 100%;
@@ -85,7 +83,7 @@
 
   .list {
     width: 100%;
-    height: 15rem;
+    height: 30vh;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
@@ -94,7 +92,7 @@
 
   .pagination {
     display: flex;
-    margin: 0 auto;
+    margin: 0.5rem auto;
     width: 100%;
     overflow-x: auto;
     list-style-type: none;
