--- a/front-end/src/components/user/profile/card/Card.css
+++ b/front-end/src/components/user/profile/card/Card.css
@@ -1,5 +1,6 @@
 .profile-card-container {
   width: 90vw;
+  max-width: 640px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,16 +17,25 @@
   .info-container {
     width: 100%;
     margin: 1rem 0;
-
     display: flex;
     flex-direction: column;
     gap: 2rem;
+
+    @media screen and (min-width: 768px) {
+      padding: 0 1rem;
+    }
 
     .buttons {
       gap: 1.5rem;
 
       button {
-        width: 2.5rem;
+        width: 7rem;
+        font-size: 0.9rem;
+
+        .button-icon {
+          width: 1rem;
+          height: 1rem;
+        }
       }
     }
   }
