--- a/front-end/src/components/user/statistics/Statistics.css
+++ b/front-end/src/components/user/statistics/Statistics.css
@@ -17,7 +17,7 @@
   width: 100%;
 
   .item {
-    width: 7rem;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
